Fix keystroke vertical alignement
Same as issue https://github.com/atom/background-tips/pull/12

--- a/styles/tooltips.less
+++ b/styles/tooltips.less
@@ -16,7 +16,7 @@
   }
 
   .keystroke {
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: "Helvetica Neue", Arial, sans-serif;
     font-size: 13px;
     padding: 1px 3px;
     margin: 0 -4px 0 3px;
